# foundation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: base.cmake  dependencies.cmake  discover_tests.cmake  discover_tests_and_write_script.cmake  host.cmake  test.cmake
docs/design/: foundation.md  logging.md
docs/policy/: naming-conventions.md
documentation/design/: foundation.md
include/foundation/: exception.hh  host.hh.in  version.hh
include/infinity-pattern/foundation/: exception.hh  host.hh.in  version.hh
include/infinity-pattern/foundation/logging/: logger.hh
include/infinity-pattern/foundation/project/: version.hh
include/infinity-pattern/foundation/system/: host.hh.in
include/infinity-pattern/foundation/utility/: error.hh  error.hpp  thread_pool.hh
source/foundation/: version.cc.in
source/infinity-pattern/foundation/: CMakeLists.txt  version.cc.in
source/infinity-pattern/foundation/project/: version.cc.in  version.cpp  version.cpp.in
test/infinity-pattern/foundation/: CMakeLists.txt  main.cc  main.cpp
test/infinity-pattern/foundation/project/: version.cc  version.cpp
test/infinity-pattern/foundation/utility/: error.cc  error.cpp
